--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "autoload": {
         "psr-4": {
             "Kozz\\Laravel\\": "src/",
-            "Kozz\\Tests\\Laravel": "tests/"
+            "Kozz\\Tests\\Laravel\\": "tests/"
         }
     },
     "extra": {
