--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "illuminate/support": "~5.0",
+        "php": "^7.2.0",
+        "illuminate/support": "^5.0 | ^6.0",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
