--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^7.2.0",
-        "illuminate/support": "^5.0 | ^6.0",
+        "illuminate/support": "^5.0 | ^6.0| ^7.0 | ^8.0",
         "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
